2003-04-02  Charles Iliya Krempeaux  <charles@reptile.ca>
	* generator/SignalHandler.cs : Added Patch submitted by
	  Mark Crichton <crichton@gimp.org>, to get GtkMozEmbed
	  bindings working.

2003-04-02  Lee Mallabone  <gnome@fonicmonkey.net>

	* gtk/Entry.custom: Add a constructor that sets the initial contents.
	
	* sources/Gtk.metadata:
	* api/gtk-api.xml: Fix API 'out' parameters in 'Frame' and some in 'Widget'.

2003-03-27  Lee Mallabone  <gnome@fonicmonkey.net>
	
	* api/gtk-api.xml, sources/Gtk.metadata, gtk/Viewport.custom:
	Add default constructor to Viewport.

2003-03-25  Lee Mallabone  <gnome@fonicmonkey.net>

	* api/gtk-api.xml: Allow parameters in TreeView.ScrollToCell to be null. 
	* source/Gtk.Metadata: Mark TreeView.ScrollToCell() with some null_ok params.

2003-03-25  Martin Baulig  <martin@ximian.com>

	* gtk/Application.cs (CurrentEvent): Made this property static.

2003-03-25  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* sample/rsvg/Makefile.in: don't build the sample app. everytime.

2003-03-25  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* api/gtk-api.xml: changed DisplayOptions by SetDisplayOptions.
	* sources/Gtk.metadata: added rename hint for DisplayOptions. Moved 
	GtkHTMLStream hints to 'misc' area (they were in 'rename' area).

	* gtk/Calendar.custom: added a .net style GetDate override.
	* sample/CalendarApp.cs: updated to new methods in the Calendar API.

2003-03-23  Martin Baulig  <martin@ximian.com>

	* glib/Object.cs (Dispose): Call `Objects.Remove (_obj)' here
	instead of in PerformQueuedUnrefs().

2003-03-22  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* sample/Fifteen.cs: work-around for bug 106145 in gnome bugzilla.
	* sample/DbClient/client.cs: updated to make it compile again.

2003-03-22  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* glue/adjustment.c:
	* glue/canvaspoints.c:
	* glue/clipboard.c:
	* glue/colorseldialog.c:
	* glue/combo.c:
	* glue/dialog.c:
	* glue/error.c:
	* glue/event.c: