@@ -757,11 +757,11 @@
           <parameter type="gint" name="y2"/>
         </parameters>
       </method>
-      <method name="DrawLines" cname="gdk_draw_lines">
+      <method name="DrawLines" cname="gdk_draw_lines" hidden="1">
         <return-type type="void"/>
         <parameters>
           <parameter type="GdkGC*" name="gc"/>
-          <parameter type="GdkPoint*" name="points"/>
+          <parameter type="GdkPoint*" name="points" array="1"/>
           <parameter type="gint" name="npoints"/>
         </parameters>
       </method>
@@ -781,12 +781,12 @@
           <parameter type="gint" name="npoints"/>
         </parameters>
       </method>
-      <method name="DrawPolygon" cname="gdk_draw_polygon">
+      <method name="DrawPolygon" cname="gdk_draw_polygon" hidden="1">
         <return-type type="void"/>
         <parameters>
           <parameter type="GdkGC*" name="gc"/>
           <parameter type="gint" name="filled"/>
-          <parameter type="GdkPoint*" name="points"/>
+          <parameter type="GdkPoint*" name="points" array="1"/>
           <parameter type="gint" name="npoints"/>
         </parameters>
       </method>
@@ -1502,8 +1502,8 @@
           <callback cname="child_func">
             <return-type type="gboolean"/>
             <parameters>
-              <parameter type="        gboolean " name="child_func"/>
-              <parameter type="        gboolean " name="child_func"/>
+              <parameter type="" name=""/>
+              <parameter type="" name=""/>
             </parameters>
           </callback>
           <parameter type="gpointer" name="user_data"/>
