@@ -28,6 +28,32 @@
  </data>
 </rule>
 
+<rule>
+  <class name="GdkDrawable">
+    <method>DrawPolygon</method>
+  </class>
+  <data>
+    <attribute target="param">
+      <filter level="type">GdkPoint*</filter>
+        <name>array</name>
+     <value>1</value>
+    </attribute>
+ </data>
+</rule>
+
+<rule>
+  <class name="GdkDrawable">
+    <method>DrawLines</method>
+  </class>
+  <data>
+    <attribute target="param">
+      <filter level="type">GdkPoint*</filter>
+        <name>array</name>
+     <value>1</value>
+    </attribute>
+ </data>
+</rule>
+
 <!-- null args -->
 <rule>
   <class name="GdkPixmap">
@@ -145,6 +171,18 @@
 </rule>
 
 <!-- hides -->
+<rule>
+  <class name="GdkDrawable">
+    <method>DrawPolygon</method>
+    <method>DrawLines</method>
+  </class>
+  <data>
+    <attribute target="method">
+      <name>hidden</name>
+      <value>1</value>
+    </attribute>
+  </data>
+</rule>
 <rule>
   <class name="GdkPixbuf">
     <method>AddAlpha</method>
