@@ -1,3 +1,11 @@
+2003-04-04  Lee Mallabone  <gnome@fonicmonkey.net>
+
+	* gdk/Drawable.custom:
+	* sources/Gdk.metadata:
+	* api/gdk-api.xml: Apply a modified version of a patch from
+	Artemis <artemis@yandex.ru>, to fix and clean DrawPolygon and 
+	DrawLines in Gdk.Drawable.
+
 2003-04-02  Charles Iliya Krempeaux  <charles@reptile.ca>
 	* generator/SignalHandler.cs : Added Patch submitted by
 	  Mark Crichton <crichton@gimp.org>, to get GtkMozEmbed
